Update observed commands

--- a/tests/test_cases/2020/commands/7E0.012F.yaml
+++ b/tests/test_cases/2020/commands/7E0.012F.yaml
@@ -2,9 +2,48 @@ command_id: 7E0.012F
 can_id_format: ELEVEN_BIT
 extended_addressing_enabled: false
 test_cases:
+- response: 7E803412F0C
+  expected_values:
+    FLI: 4.70588
+- response: 7E803412F19
+  expected_values:
+    FLI: 9.80392
+- response: 7E803412F1B
+  expected_values:
+    FLI: 10.58824
+- response: 7E803412F1C
+  expected_values:
+    FLI: 10.98039
+- response: 7E803412F21
+  expected_values:
+    FLI: 12.94118
+- response: 7E803412F24
+  expected_values:
+    FLI: 14.11765
+- response: 7E803412F26
+  expected_values:
+    FLI: 14.90196
 - response: 7E803412F27
   expected_values:
     FLI: 15.29412
+- response: 7E803412F29
+  expected_values:
+    FLI: 16.07843
+- response: 7E803412F2B
+  expected_values:
+    FLI: 16.86275
+- response: 7E803412F2C
+  expected_values:
+    FLI: 17.2549
+- response: 7E803412F2D
+  expected_values:
+    FLI: 17.64706
+- response: 7E803412F2F
+  expected_values:
+    FLI: 18.43137
+- response: 7E803412F30
+  expected_values:
+    FLI: 18.82353
 - response: 7E803412F31
   expected_values:
     FLI: 19.21569
@@ -14,12 +53,24 @@ test_cases:
 - response: 7E803412F33
   expected_values:
     FLI: 20
+- response: 7E803412F34
+  expected_values:
+    FLI: 20.39216
 - response: 7E803412F35
   expected_values:
     FLI: 20.78431
 - response: 7E803412F36
   expected_values:
     FLI: 21.17647
+- response: 7E803412F37
+  expected_values:
+    FLI: 21.56863
+- response: 7E803412F38
+  expected_values:
+    FLI: 21.96078
+- response: 7E803412F39
+  expected_values:
+    FLI: 22.35294
 - response: 7E803412F3A
   expected_values:
     FLI: 22.7451
@@ -35,6 +86,18 @@ test_cases:
 - response: 7E803412F3E
   expected_values:
     FLI: 24.31373
+- response: 7E803412F3F
+  expected_values:
+    FLI: 24.70588
+- response: 7E803412F42
+  expected_values:
+    FLI: 25.88235
+- response: 7E803412F43
+  expected_values:
+    FLI: 26.27451
+- response: 7E803412F46
+  expected_values:
+    FLI: 27.45098
 - response: 7E803412F4E
   expected_values:
     FLI: 30.58824
