--- a/tests/test_cases/2020/commands/7E0.0131.yaml
+++ b/tests/test_cases/2020/commands/7E0.0131.yaml
@@ -47,6 +47,93 @@ test_cases:
 - response: 7E8044131009B
   expected_values:
     CLR_DIST: 155
+- response: 7E804413100C1
+  expected_values:
+    CLR_DIST: 193
+- response: 7E804413100C2
+  expected_values:
+    CLR_DIST: 194
+- response: 7E804413100C3
+  expected_values:
+    CLR_DIST: 195
+- response: 7E804413100C4
+  expected_values:
+    CLR_DIST: 196
+- response: 7E804413100C5
+  expected_values:
+    CLR_DIST: 197
+- response: 7E804413100C6
+  expected_values:
+    CLR_DIST: 198
+- response: 7E804413100C7
+  expected_values:
+    CLR_DIST: 199
+- response: 7E804413100C9
+  expected_values:
+    CLR_DIST: 201
+- response: 7E804413100CA
+  expected_values:
+    CLR_DIST: 202
+- response: 7E804413100CB
+  expected_values:
+    CLR_DIST: 203
+- response: 7E804413100CC
+  expected_values:
+    CLR_DIST: 204
+- response: 7E804413100CD
+  expected_values:
+    CLR_DIST: 205
+- response: 7E804413100CE
+  expected_values:
+    CLR_DIST: 206
+- response: 7E804413100CF
+  expected_values:
+    CLR_DIST: 207
+- response: 7E804413100D0
+  expected_values:
+    CLR_DIST: 208
+- response: 7E804413100D1
+  expected_values:
+    CLR_DIST: 209
+- response: 7E804413100D2
+  expected_values:
+    CLR_DIST: 210
+- response: 7E804413100D3
+  expected_values:
+    CLR_DIST: 211
+- response: 7E804413100D4
+  expected_values:
+    CLR_DIST: 212
+- response: 7E804413100D5
+  expected_values:
+    CLR_DIST: 213
+- response: 7E804413100D6
+  expected_values:
+    CLR_DIST: 214
+- response: 7E804413100D7
+  expected_values:
+    CLR_DIST: 215
+- response: 7E804413100D8
+  expected_values:
+    CLR_DIST: 216
+- response: 7E804413100D9
+  expected_values:
+    CLR_DIST: 217
+- response: 7E804413100DA
+  expected_values:
+    CLR_DIST: 218
+- response: 7E804413100DB
+  expected_values:
+    CLR_DIST: 219
+- response: 7E804413100DC
+  expected_values:
+    CLR_DIST: 220
+- response: 7E804413100DD
+  expected_values:
+    CLR_DIST: 221
+- response: 7E804413100DE
+  expected_values:
+    CLR_DIST: 222
 - response: 7E8044131049A
   expected_values:
     CLR_DIST: 1178
