--- a/tests/test_cases/2020/commands/7E0.01A6.yaml
+++ b/tests/test_cases/2020/commands/7E0.01A6.yaml
@@ -140,3 +140,204 @@ test_cases:
 - response: 7E80641A600179884
   expected_values:
     ODO: 154637.2
+- response: 7E80641A600179A2F
+  expected_values:
+    ODO: 154679.9
+- response: 7E80641A600179A32
+  expected_values:
+    ODO: 154680.2
+- response: 7E80641A600179A35
+  expected_values:
+    ODO: 154680.5
+- response: 7E80641A600179A37
+  expected_values:
+    ODO: 154680.7
+- response: 7E80641A600179A39
+  expected_values:
+    ODO: 154680.9
+- response: 7E80641A600179A40
+  expected_values:
+    ODO: 154681.6
+- response: 7E80641A600179A4A
+  expected_values:
+    ODO: 154682.6
+- response: 7E80641A600179A55
+  expected_values:
+    ODO: 154683.7
+- response: 7E80641A600179A60
+  expected_values:
+    ODO: 154684.8
+- response: 7E80641A600179A6A
+  expected_values:
+    ODO: 154685.8
+- response: 7E80641A600179A74
+  expected_values:
+    ODO: 154686.8
+- response: 7E80641A600179A7E
+  expected_values:
+    ODO: 154687.8
+- response: 7E80641A600179A87
+  expected_values:
+    ODO: 154688.7
+- response: 7E80641A600179A90
+  expected_values:
+    ODO: 154689.6
+- response: 7E80641A600179A96
+  expected_values:
+    ODO: 154690.2
+- response: 7E80641A600179A9B
+  expected_values:
+    ODO: 154690.7
+- response: 7E80641A600179AA1
+  expected_values:
+    ODO: 154691.3
+- response: 7E80641A600179AA7
+  expected_values:
+    ODO: 154691.9
+- response: 7E80641A600179AA9
+  expected_values:
+    ODO: 154692.1
+- response: 7E80641A600179AAA
+  expected_values:
+    ODO: 154692.2
+- response: 7E80641A600179AAB
+  expected_values:
+    ODO: 154692.3
+- response: 7E80641A600179AAC
+  expected_values:
+    ODO: 154692.4
+- response: 7E80641A600179AAE
+  expected_values:
+    ODO: 154692.6
+- response: 7E80641A600179AAF
+  expected_values:
+    ODO: 154692.7
+- response: 7E80641A600179AB1
+  expected_values:
+    ODO: 154692.9
+- response: 7E80641A600179AB3
+  expected_values:
+    ODO: 154693.1
+- response: 7E80641A600179AB7
+  expected_values:
+    ODO: 154693.5
+- response: 7E80641A600179AC3
+  expected_values:
+    ODO: 154694.7
+- response: 7E80641A600179AC8
+  expected_values:
+    ODO: 154695.2
+- response: 7E80641A600179ACD
+  expected_values:
+    ODO: 154695.7
+- response: 7E80641A600179AD2
+  expected_values:
+    ODO: 154696.2
+- response: 7E80641A600179AD8
+  expected_values:
+    ODO: 154696.8
+- response: 7E80641A600179ADD
+  expected_values:
+    ODO: 154697.3
+- response: 7E80641A600179AE2
+  expected_values:
+    ODO: 154697.8
+- response: 7E80641A600179AE4
+  expected_values:
+    ODO: 154698
+- response: 7E80641A600179AE5
+  expected_values:
+    ODO: 154698.1
+- response: 7E80641A600179AE6
+  expected_values:
+    ODO: 154698.2
+- response: 7E80641A600179AE7
+  expected_values:
+    ODO: 154698.3
+- response: 7E80641A600179AE8
+  expected_values:
+    ODO: 154698.4
+- response: 7E80641A600179AE9
+  expected_values:
+    ODO: 154698.5
+- response: 7E80641A600179AEA
+  expected_values:
+    ODO: 154698.6
+- response: 7E80641A600179AEE
+  expected_values:
+    ODO: 154699
+- response: 7E80641A600179AF4
+  expected_values:
+    ODO: 154699.6
+- response: 7E80641A600179AFA
+  expected_values:
+    ODO: 154700.2
+- response: 7E80641A600179B00
+  expected_values:
+    ODO: 154700.8
+- response: 7E80641A600179B04
+  expected_values:
+    ODO: 154701.2
+- response: 7E80641A600179B09
+  expected_values:
+    ODO: 154701.7
+- response: 7E80641A600179B0E
+  expected_values:
+    ODO: 154702.2
+- response: 7E80641A600179B12
+  expected_values:
+    ODO: 154702.6
+- response: 7E80641A600179B14
+  expected_values:
+    ODO: 154702.8
+- response: 7E80641A600179B15
+  expected_values:
+    ODO: 154702.9
+- response: 7E80641A600179B17
+  expected_values:
+    ODO: 154703.1
+- response: 7E80641A600179B19
+  expected_values:
+    ODO: 154703.3
+- response: 7E80641A600179B1B
+  expected_values:
+    ODO: 154703.5
+- response: 7E80641A600179B20
+  expected_values:
+    ODO: 154704
+- response: 7E80641A600179B27
+  expected_values:
+    ODO: 154704.7
+- response: 7E80641A600179B2D
+  expected_values:
+    ODO: 154705.3
+- response: 7E80641A600179B34
+  expected_values:
+    ODO: 154706
+- response: 7E80641A600179B39
+  expected_values:
+    ODO: 154706.5
+- response: 7E80641A600179B41
+  expected_values:
+    ODO: 154707.3
+- response: 7E80641A600179B48
+  expected_values:
+    ODO: 154708
+- response: 7E80641A600179B4D
+  expected_values:
+    ODO: 154708.5
+- response: 7E80641A600179B4F
+  expected_values:
+    ODO: 154708.7
+- response: 7E80641A600179B50
+  expected_values:
+    ODO: 154708.8
+- response: 7E80641A600179B51
+  expected_values:
+    ODO: 154708.9
+- response: 7E80641A600179B52
+  expected_values:
+    ODO: 154709
+- response: 7E80641A600179B53
+  expected_values:
+    ODO: 154709.1
