--- a/tests/test_cases/2021/commands/7E0.012F.yaml
+++ b/tests/test_cases/2021/commands/7E0.012F.yaml
@@ -11,3 +11,21 @@ test_cases:
 - response: 7E803412F57
   expected_values:
     FLI: 34.11765
+- response: 7E803412F78
+  expected_values:
+    FLI: 47.05882
+- response: 7E803412F7C
+  expected_values:
+    FLI: 48.62745
+- response: 7E803412F7D
+  expected_values:
+    FLI: 49.01961
+- response: 7E803412F7E
+  expected_values:
+    FLI: 49.41176
+- response: 7E803412F7F
+  expected_values:
+    FLI: 49.80392
+- response: 7E803412F84
+  expected_values:
+    FLI: 51.76471
