Updated command responses

--- a/tests/test_cases/2021/commands/7E0.0131.yaml
+++ b/tests/test_cases/2021/commands/7E0.0131.yaml
@@ -11,3 +11,6 @@ test_cases:
 - response: '7E80441314507'
   expected_values:
     CLR_DIST: 17671
+- response: '7E80441314762'
+  expected_values:
+    CLR_DIST: 18274
