--- a/tests/test_cases/2021/commands/7E0.0131.yaml
+++ b/tests/test_cases/2021/commands/7E0.0131.yaml
@@ -11,6 +11,6 @@ test_cases:
 - response: '7E80441314507'
   expected_values:
     CLR_DIST: 17671
-- response: '7E80441314762'
+- response: 7E8044131481D
   expected_values:
-    CLR_DIST: 18274
+    CLR_DIST: 18461
