--- a/tests/test_cases/2019/command_support.yaml
+++ b/tests/test_cases/2019/command_support.yaml
@@ -60,3 +60,11 @@ supported_commands_by_ecu:
   7E5:
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0142:VPWR
+unsupported_commands_by_ecu:
+  7E0:
+  - 7E0.7E8.22248E
+  - 7E0.7E8.22248F
+  - 7E0.7E8.222490
+  - 7E0.7E8.222491
+  - 7E0.7E8.22C901
+  - 7E0.7E8.22C902
