--- a/tests/test_cases/2019/commands/7E0.0131.yaml
+++ b/tests/test_cases/2019/commands/7E0.0131.yaml
@@ -1,10 +1,10 @@
-command_id: 7E0.012F
+command_id: 7E0.0131
 can_id_format: ELEVEN_BIT
 extended_addressing_enabled: false
 test_cases:
-- response: 7E803412F0C
+- response: 7E80441310A4F
   expected_values:
-    FLI: 4.70588
-- response: 7E803412FBF
+    CLR_DIST: 2639
+- response: 7E80441310AEA
   expected_values:
-    FLI: 74.90196
+    CLR_DIST: 2794
