--- a/tests/test_cases/2020/commands/7E0.0142.yaml
+++ b/tests/test_cases/2020/commands/7E0.0142.yaml
@@ -5,9 +5,9 @@ test_cases:
 - response: '7E80441420000'
   expected_values:
     VPWR: 0
-- response: 7E804414235FF
+- response: 7E804414235FE
   expected_values:
-    VPWR: 13.823
-- response: 7E804414239D7
+    VPWR: 13.822
+- response: '7E80441423607'
   expected_values:
-    VPWR: 14.807
+    VPWR: 13.831
