--- a/tests/test_cases/2021/commands/7E0.01A6.yaml
+++ b/tests/test_cases/2021/commands/7E0.01A6.yaml
@@ -11,3 +11,6 @@ test_cases:
 - response: 7E80641A60016C001
   expected_values:
     ODO: 149094.5
+- response: 7E80641A60016D95D
+  expected_values:
+    ODO: 149743.7
