--- a/tests/test_cases/2022/command_support.yaml
+++ b/tests/test_cases/2022/command_support.yaml
@@ -44,12 +44,66 @@ supported_commands_by_ecu:
   - 014A:APP_E
   - 014C:TAC_PCT
   - 0151:FUEL_TYP
+  - 015C:EOT
+  - 015D:FUEL_TIMING
+  - 015E:FUEL_RATE
+  - 0161:TQ_DD
   - 0162:TQ_ACT
   - 0163:TQ_REF
+  - 0165:GEAR_RCMD,GEAR_SUP,GPL_STAT,GPL_SUP,N/D_STAT,N/D_SUP,N/G_STAT,N/G_SUP,PTO_STAT_AUX,PTO_SUP
   - 0167:ECT_1,ECT_1_SUP,ECT_2,ECT_2_SUP
   - 0168:IAT_11,IAT_11_SUP,IAT_12,IAT_12_SUP,IAT_13,IAT_13_SUP,IAT_21,IAT_21_SUP,IAT_22,IAT_22_SUP,IAT_23,IAT_23_SUP
+  - 0169:EGR_A_ACT,EGR_A_ACT_SUP,EGR_A_CMD,EGR_A_CMD_SUP,EGR_A_ERR,EGR_A_ERR_SUP,EGR_B_ACT,EGR_B_ACT_SUP,EGR_B_CMD,EGR_B_CMD_SUP,EGR_B_ERR,EGR_B_ERR_SUP
   - 016D:FRP_A,FRP_A_CMD,FRP_A_CMD_SUP,FRP_A_SUP,FRP_B,FRP_B_CMD,FRP_B_CMD_SUP,FRP_B_SUP,FRT_A,FRT_A_SUP,FRT_B,FRT_B_SUP
+  - 0170:BP_A,BP_A_ACT,BP_A_ACT_SUP,BP_A_CMD,BP_A_CMD_SUP,BP_A_SUP,BP_B,BP_B_ACT,BP_B_ACT_SUP,BP_B_CMD,BP_B_CMD_SUP,BP_B_SUP
+  - 017F:IDLE_TIME,IDLE_TIME_SUP,PTO_TIME,PTO_TIME_SUP,RUN_TIME,RUN_TIME_SUP
   - 018E:TQ_FR
   - 019D:FUEL_RATE_ALT,VFUEL_RATE
   - 019E:EXH_RATE
+  - 01A2:CYL_RATE
   - 01A6:ODO
+unsupported_commands_by_ecu:
+  7E0:
+  - 7E0.7E8.22000D:SIERRA1500_VSS
+  - 7E0.7E8.22248E:SIERRA1500_TP_FL
+  - 7E0.7E8.22248F:SIERRA1500_TP_FR
+  - 7E0.7E8.222490:SIERRA1500_TP_RR
+  - 7E0.7E8.222491:SIERRA1500_TP_RL
+  - 7E0.7E8.22C901:SIERRA1500_TP_P1,SIERRA1500_TP_P2,SIERRA1500_TP_P3,SIERRA1500_TP_P4
+  - 7E0.7E8.22C902:SIERRA1500_TP_T1,SIERRA1500_TP_T2,SIERRA1500_TP_T3,SIERRA1500_TP_T4
+  DB33:
+  - DB33.0101
+  - DB33.0104
+  - DB33.0105
+  - DB33.010C
+  - DB33.010D
+  - DB33.0110
+  - DB33.011C
+  - DB33.011F
+  - DB33.0121
+  - DB33.012F
+  - DB33.0130
+  - DB33.0131
+  - DB33.0133
+  - DB33.013C
+  - DB33.0141
+  - DB33.0142
+  - DB33.0143
+  - DB33.0144
+  - DB33.0146
+  - DB33.0149
+  - DB33.014A
+  - DB33.015C
+  - DB33.015E
+  - DB33.0161
+  - DB33.0162
+  - DB33.0163
+  - DB33.0167
+  - DB33.0169
+  - DB33.016D
+  - DB33.0170
+  - DB33.018E
+  - DB33.019D
+  - DB33.019E
+  - DB33.01A2
+  - DB33.01A6
