--- a/tests/test_cases/2016/command_support.yaml
+++ b/tests/test_cases/2016/command_support.yaml
@@ -1,6 +1,4 @@
 model_year: 2016
-can_id_format: ELEVEN_BIT
-extended_addressing_enabled: false
 supported_commands_by_ecu:
   7E0:
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
@@ -47,6 +45,16 @@ supported_commands_by_ecu:
   - 014F:MAX_EQ_RAT,MAX_MAP,MAX_O2_CURR,MAX_O2_VOLT
   - 0151:FUEL_TYP
   - 0152:ALCH_PCT
+  - 0168:IAT_11,IAT_11_SUP,IAT_12,IAT_12_SUP,IAT_13,IAT_13_SUP,IAT_21,IAT_21_SUP,IAT_22,IAT_22_SUP,IAT_23,IAT_23_SUP
+  - 016D:FRP_A,FRP_A_CMD,FRP_A_CMD_SUP,FRP_A_SUP,FRP_B,FRP_B_CMD,FRP_B_CMD_SUP,FRP_B_SUP,FRT_A,FRT_A_SUP,FRT_B,FRT_B_SUP
   7E2:
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0142:VPWR
+unsupported_commands_by_ecu:
+  7E0:
+  - 7E0.7E8.22248E:SIERRA1500_TP_FL
+  - 7E0.7E8.22248F:SIERRA1500_TP_FR
+  - 7E0.7E8.222490:SIERRA1500_TP_RR
+  - 7E0.7E8.222491:SIERRA1500_TP_RL
+  - 7E0.7E8.22C901:SIERRA1500_TP_P1,SIERRA1500_TP_P2,SIERRA1500_TP_P3,SIERRA1500_TP_P4
+  - 7E0.7E8.22C902:SIERRA1500_TP_T1,SIERRA1500_TP_T2,SIERRA1500_TP_T3,SIERRA1500_TP_T4
