--- a/tests/test_cases/2019/command_support.yaml
+++ b/tests/test_cases/2019/command_support.yaml
@@ -1,6 +1,4 @@
 model_year: 2019
-can_id_format: ELEVEN_BIT
-extended_addressing_enabled: false
 supported_commands_by_ecu:
   7E0:
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
@@ -62,9 +60,9 @@ supported_commands_by_ecu:
   - 0142:VPWR
 unsupported_commands_by_ecu:
   7E0:
-  - 7E0.7E8.22248E
-  - 7E0.7E8.22248F
-  - 7E0.7E8.222490
-  - 7E0.7E8.222491
-  - 7E0.7E8.22C901
-  - 7E0.7E8.22C902
+  - 7E0.7E8.22248E:SIERRA1500_TP_FL
+  - 7E0.7E8.22248F:SIERRA1500_TP_FR
+  - 7E0.7E8.222490:SIERRA1500_TP_RR
+  - 7E0.7E8.222491:SIERRA1500_TP_RL
+  - 7E0.7E8.22C901:SIERRA1500_TP_P1,SIERRA1500_TP_P2,SIERRA1500_TP_P3,SIERRA1500_TP_P4
+  - 7E0.7E8.22C902:SIERRA1500_TP_T1,SIERRA1500_TP_T2,SIERRA1500_TP_T3,SIERRA1500_TP_T4
