--- a/tests/test_cases/2022/command_support.yaml
+++ b/tests/test_cases/2022/command_support.yaml
@@ -1,6 +1,4 @@
 model_year: 2022
-can_id_format: ELEVEN_BIT
-extended_addressing_enabled: false
 supported_commands_by_ecu:
   DB33:
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
@@ -72,38 +70,35 @@ unsupported_commands_by_ecu:
   - 7E0.7E8.22C901:SIERRA1500_TP_P1,SIERRA1500_TP_P2,SIERRA1500_TP_P3,SIERRA1500_TP_P4
   - 7E0.7E8.22C902:SIERRA1500_TP_T1,SIERRA1500_TP_T2,SIERRA1500_TP_T3,SIERRA1500_TP_T4
   DB33:
-  - DB33.0101
-  - DB33.0104
-  - DB33.0105
-  - DB33.010C
-  - DB33.010D
-  - DB33.0110
-  - DB33.011C
-  - DB33.011F
-  - DB33.0121
-  - DB33.012F
-  - DB33.0130
-  - DB33.0131
-  - DB33.0133
-  - DB33.013C
-  - DB33.0141
-  - DB33.0142
-  - DB33.0143
-  - DB33.0144
-  - DB33.0146
-  - DB33.0149
-  - DB33.014A
-  - DB33.015C
-  - DB33.015E
-  - DB33.0161
-  - DB33.0162
-  - DB33.0163
-  - DB33.0167
-  - DB33.0169
-  - DB33.016D
-  - DB33.0170
-  - DB33.018E
-  - DB33.019D
-  - DB33.019E
-  - DB33.01A2
-  - DB33.01A6
+  - DB33.0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
+  - DB33.0104:LOAD_PCT
+  - DB33.0105:ECT
+  - DB33.010C:RPM
+  - DB33.010D:VSS
+  - DB33.0110:MAF
+  - DB33.011C:OBDSUP
+  - DB33.011F:RUNTM
+  - DB33.0121:MIL_DIST
+  - DB33.0130:WARM_UPS
+  - DB33.0133:BARO
+  - DB33.013C:CATEMP11
+  - DB33.0141:ACRFCMPL,ACRF_ENA,AIR_CMPL,AIR_ENA,CAT_CMPL,CAT_ENA,CCM_CMPL,CCM_ENA,CIM_SUP_FLAG,EGR_CMPL,EGR_ENA,EVAPCMPL,EVAP_ENA,FUEL_CMPL,FUEL_ENA,HCATCMPL,HCAT_ENA,HTR_CMPL,HTR_ENA,MIS_CMPL,MIS_ENA,O2S_CMPL,O2S_ENA
+  - DB33.0142:VPWR
+  - DB33.0143:LOAD_ABS
+  - DB33.0144:EQ_RAT
+  - DB33.0146:AAT
+  - DB33.0149:APP_D
+  - DB33.014A:APP_E
+  - DB33.015C:EOT
+  - DB33.015E:FUEL_RATE
+  - DB33.0161:TQ_DD
+  - DB33.0162:TQ_ACT
+  - DB33.0163:TQ_REF
+  - DB33.0167:ECT_1,ECT_1_SUP,ECT_2,ECT_2_SUP
+  - DB33.0169:EGR_A_ACT,EGR_A_ACT_SUP,EGR_A_CMD,EGR_A_CMD_SUP,EGR_A_ERR,EGR_A_ERR_SUP,EGR_B_ACT,EGR_B_ACT_SUP,EGR_B_CMD,EGR_B_CMD_SUP,EGR_B_ERR,EGR_B_ERR_SUP
+  - DB33.016D:FRP_A,FRP_A_CMD,FRP_A_CMD_SUP,FRP_A_SUP,FRP_B,FRP_B_CMD,FRP_B_CMD_SUP,FRP_B_SUP,FRT_A,FRT_A_SUP,FRT_B,FRT_B_SUP
+  - DB33.0170:BP_A,BP_A_ACT,BP_A_ACT_SUP,BP_A_CMD,BP_A_CMD_SUP,BP_A_SUP,BP_B,BP_B_ACT,BP_B_ACT_SUP,BP_B_CMD,BP_B_CMD_SUP,BP_B_SUP
+  - DB33.018E:TQ_FR
+  - DB33.019D:FUEL_RATE_ALT,VFUEL_RATE
+  - DB33.019E:EXH_RATE
+  - DB33.01A2:CYL_RATE
