--- a/tests/test_cases/2024/command_support.yaml
+++ b/tests/test_cases/2024/command_support.yaml
@@ -1,6 +1,4 @@
 model_year: 2024
-can_id_format: ELEVEN_BIT
-extended_addressing_enabled: false
 supported_commands_by_ecu:
   DB33:
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
@@ -63,33 +61,47 @@ supported_commands_by_ecu:
   - 01A6:ODO
 unsupported_commands_by_ecu:
   7E0:
-  - 7E0.7E8.22000D
-  - 7E0.7E8.22248E
-  - 7E0.7E8.22248F
-  - 7E0.7E8.222490
-  - 7E0.7E8.222491
-  - 7E0.7E8.22C901
-  - 7E0.7E8.22C902
+  - 7E0.7E8.22000D:SIERRA1500_VSS
+  - 7E0.7E8.22248E:SIERRA1500_TP_FL
+  - 7E0.7E8.22248F:SIERRA1500_TP_FR
+  - 7E0.7E8.222490:SIERRA1500_TP_RR
+  - 7E0.7E8.222491:SIERRA1500_TP_RL
+  - 7E0.7E8.22C901:SIERRA1500_TP_P1,SIERRA1500_TP_P2,SIERRA1500_TP_P3,SIERRA1500_TP_P4
+  - 7E0.7E8.22C902:SIERRA1500_TP_T1,SIERRA1500_TP_T2,SIERRA1500_TP_T3,SIERRA1500_TP_T4
   7E4:
   - 7E4.7EC.22434F
+  - 7E4.7EC.224368
+  - 7E4.7EC.224369
   - 7E4.7EC.22436B
+  - 7E4.7EC.22436C
   - 7E4.7EC.224373
+  - 7E4.7EC.2243A5
+  - 7E4.7EC.2243AF
+  - 7E4.7EC.224531
   - 7E4.7EC.228334
   7E7:
+  - 7E7.7EF.224181
   - 7E7.7EF.224182
   - 7E7.7EF.224183
+  - 7E7.7EF.224184
   - 7E7.7EF.224185
+  - 7E7.7EF.224186
   - 7E7.7EF.224187
   - 7E7.7EF.224188
   - 7E7.7EF.224189
   - 7E7.7EF.22418A
   - 7E7.7EF.22418B
   - 7E7.7EF.22418C
+  - 7E7.7EF.22418D
   - 7E7.7EF.22418E
+  - 7E7.7EF.22418F
   - 7E7.7EF.224190
+  - 7E7.7EF.224191
   - 7E7.7EF.224192
   - 7E7.7EF.224193
   - 7E7.7EF.224194
+  - 7E7.7EF.224195
+  - 7E7.7EF.224196
   - 7E7.7EF.224197
   - 7E7.7EF.224198
   - 7E7.7EF.224199
@@ -97,15 +109,26 @@ unsupported_commands_by_ecu:
   - 7E7.7EF.22419B
   - 7E7.7EF.22419C
   - 7E7.7EF.22419D
+  - 7E7.7EF.22419E
   - 7E7.7EF.22419F
   - 7E7.7EF.224200
   - 7E7.7EF.224201
+  - 7E7.7EF.224202
   - 7E7.7EF.224203
   - 7E7.7EF.224204
+  - 7E7.7EF.224205
   - 7E7.7EF.224206
   - 7E7.7EF.224207
+  - 7E7.7EF.224208
+  - 7E7.7EF.224209
+  - 7E7.7EF.22420A
+  - 7E7.7EF.22420B
+  - 7E7.7EF.22420C
+  - 7E7.7EF.22420D
   - 7E7.7EF.22420E
   - 7E7.7EF.22420F
+  - 7E7.7EF.224210
+  - 7E7.7EF.224211
   - 7E7.7EF.224212
   - 7E7.7EF.224213
   - 7E7.7EF.224214
@@ -121,11 +144,16 @@ unsupported_commands_by_ecu:
   - 7E7.7EF.22421E
   - 7E7.7EF.22421F
   - 7E7.7EF.224220
+  - 7E7.7EF.224221
   - 7E7.7EF.224222
   - 7E7.7EF.224223
+  - 7E7.7EF.224224
+  - 7E7.7EF.224225
   - 7E7.7EF.224226
   - 7E7.7EF.224227
+  - 7E7.7EF.224228
   - 7E7.7EF.224229
+  - 7E7.7EF.22422A
   - 7E7.7EF.22422B
   - 7E7.7EF.22422C
   - 7E7.7EF.22422D
@@ -143,13 +171,14 @@ unsupported_commands_by_ecu:
   - 7E7.7EF.224239
   - 7E7.7EF.22423A
   - 7E7.7EF.22423B
+  - 7E7.7EF.22423C
   - 7E7.7EF.22423D
   - 7E7.7EF.22423E
   - 7E7.7EF.22423F
   - 7E7.7EF.224240
   DA1D:
   - DA1D.2233E5
-  DB33:
-  - DB33.012F
-  - DB33.0131
-  - DB33.01A6
+  DACB:
+  - DACB.2227C6
+  - DACB.222AF5
+  - DACB.222B43
