Updated command responses

--- a/tests/test_cases/2024/command_support.yaml
+++ b/tests/test_cases/2024/command_support.yaml
@@ -59,6 +59,9 @@ supported_commands_by_ecu:
   - 019E:EXH_RATE
   - 01A2:CYL_RATE
   - 01A6:ODO
+  - DB33.012F:FLI
+  - DB33.0131:CLR_DIST
+  - DB33.01A6:ODO
 unsupported_commands_by_ecu:
   7E0:
   - 7E0.7E8.22000D:SIERRA1500_VSS
