--- a/tests/test_cases/2016/command_support.yaml
+++ b/tests/test_cases/2016/command_support.yaml
@@ -47,6 +47,30 @@ supported_commands_by_ecu:
   - 0152:ALCH_PCT
   - 0168:IAT_11,IAT_11_SUP,IAT_12,IAT_12_SUP,IAT_13,IAT_13_SUP,IAT_21,IAT_21_SUP,IAT_22,IAT_22_SUP,IAT_23,IAT_23_SUP
   - 016D:FRP_A,FRP_A_CMD,FRP_A_CMD_SUP,FRP_A_SUP,FRP_B,FRP_B_CMD,FRP_B_CMD_SUP,FRP_B_SUP,FRT_A,FRT_A_SUP,FRT_B,FRT_B_SUP
+  - 7E0.0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
+  - 7E0.0103:FUELSYS1,FUELSYS2
+  - 7E0.0104:LOAD_PCT
+  - 7E0.0105:ECT
+  - 7E0.010A:FP
+  - 7E0.010C:RPM
+  - 7E0.010D:VSS
+  - 7E0.0110:MAF
+  - 7E0.0121:MIL_DIST
+  - 7E0.012E:EVAP_PCT
+  - 7E0.012F:FLI
+  - 7E0.0130:WARM_UPS
+  - 7E0.0131:CLR_DIST
+  - 7E0.0132:EVAP_VP
+  - 7E0.0133:BARO
+  - 7E0.013C:CATEMP11
+  - 7E0.013D:CATEMP21
+  - 7E0.0142:VPWR
+  - 7E0.0143:LOAD_ABS
+  - 7E0.0144:EQ_RAT
+  - 7E0.0146:AAT
+  - 7E0.014C:TAC_PCT
+  - 7E0.016D:FRP_A,FRP_A_CMD,FRP_A_CMD_SUP,FRP_A_SUP,FRP_B,FRP_B_CMD,FRP_B_CMD_SUP,FRP_B_SUP,FRT_A,FRT_A_SUP,FRT_B,FRT_B_SUP
+  - 7E0.7E8.22000D:SIERRA1500_VSS
   7E2:
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0142:VPWR
