--- a/tests/test_cases/2020/command_support.yaml
+++ b/tests/test_cases/2020/command_support.yaml
@@ -1,6 +1,6 @@
 model_year: 2020
 supported_commands_by_ecu:
-  7E0:
+  "7E0":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0103:FUELSYS1,FUELSYS2
   - 0104:LOAD_PCT
@@ -71,25 +71,25 @@ supported_commands_by_ecu:
   - 7E0.019E:EXH_RATE
   - 7E0.01A6:ODO
   - 7E0.7E8.22000D:SIERRA1500_VSS
-  7E2:
+  "7E2":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0142:VPWR
-  7E5:
+  "7E5":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0142:VPWR
-  7E6:
+  "7E6":
   - 0142:VPWR
 unsupported_commands_by_ecu:
-  7E0:
+  "7E0":
   - 7E0.7E8.22248E:SIERRA1500_TP_FL
   - 7E0.7E8.22248F:SIERRA1500_TP_FR
   - 7E0.7E8.222490:SIERRA1500_TP_RR
   - 7E0.7E8.222491:SIERRA1500_TP_RL
   - 7E0.7E8.22C901:SIERRA1500_TP_P1,SIERRA1500_TP_P2,SIERRA1500_TP_P3,SIERRA1500_TP_P4
   - 7E0.7E8.22C902:SIERRA1500_TP_T1,SIERRA1500_TP_T2,SIERRA1500_TP_T3,SIERRA1500_TP_T4
-  7E2:
+  "7E2":
   - 7E2.7EA.0142
-  7E4:
+  "7E4":
   - 7E4.7EC.22434F
   - 7E4.7EC.224368
   - 7E4.7EC.224369
@@ -100,9 +100,9 @@ unsupported_commands_by_ecu:
   - 7E4.7EC.2243AF
   - 7E4.7EC.224531
   - 7E4.7EC.228334
-  7E5:
+  "7E5":
   - 7E5.7ED.0142
-  7E7:
+  "7E7":
   - 7E7.7EF.224181
   - 7E7.7EF.224182
   - 7E7.7EF.224183
@@ -199,9 +199,9 @@ unsupported_commands_by_ecu:
   - 7E7.7EF.22423E
   - 7E7.7EF.22423F
   - 7E7.7EF.224240
-  DA1D:
+  "DA1D":
   - DA1D.2233E5
-  DACB:
+  "DACB":
   - DACB.2227C6
   - DACB.222AF5
   - DACB.222B43
