--- a/tests/test_cases/2020/commands/7E0.019E.yaml
+++ b/tests/test_cases/2020/commands/7E0.019E.yaml
@@ -1,8 +1,8 @@
 command_id: 7E0.019E
 test_cases:
-- response: 7E804419E0065
-  expected_values:
+- expected_values:
     EXH_RATE: 20.2
-- response: 7E804419E0070
-  expected_values:
+  response: 7E804419E0065
+- expected_values:
     EXH_RATE: 22.4
+  response: 7E804419E0070
