--- a/tests/test_cases/2022/commands/DB33.0131.yaml
+++ b/tests/test_cases/2022/commands/DB33.0131.yaml
@@ -1,11 +1,14 @@
 command_id: DB33.0131
 test_cases:
-- response: 18DAF111044131108B
-  expected_values:
+- expected_values:
     CLR_DIST: 4235
-- response: 18DAF11104413110FF
-  expected_values:
+  response: 18DAF111044131108B
+- expected_values:
     CLR_DIST: 4351
-- response: 18DAF1110441311101
-  expected_values:
+  response: 18DAF11104413110FF
+- expected_values:
     CLR_DIST: 4353
+  response: 18DAF1110441311101
+- expected_values:
+    CLR_DIST: 4919
+  response: 18DAF1110441311337
