--- a/tests/test_cases/2022/commands/DB33.01A6.yaml
+++ b/tests/test_cases/2022/commands/DB33.01A6.yaml
@@ -1,14 +1,14 @@
 command_id: DB33.01A6
 test_cases:
-- response: 18DAF1110641A6000814E3
-  expected_values:
+- expected_values:
     ODO: 52963.5
-- response: 18DAF1110641A600081500
-  expected_values:
+  response: 18DAF1110641A6000814E3
+- expected_values:
     ODO: 52966.4
-- response: 18DAF1110641A600081AFF
-  expected_values:
+  response: 18DAF1110641A600081500
+- expected_values:
     ODO: 53119.9
-- response: 18DAF1110641A600081B01
-  expected_values:
-    ODO: 53120.1
+  response: 18DAF1110641A600081AFF
+- expected_values:
+    ODO: 53645.5
+  response: 18DAF1110641A600082F87
