--- a/tests/test_cases/2016/commands/7E0.010C.yaml
+++ b/tests/test_cases/2016/commands/7E0.010C.yaml
@@ -1,5 +1,5 @@
 command_id: 7E0.010C
 test_cases:
-- response: 7E804410C0929
-  expected_values:
+- expected_values:
     RPM: 586.25
+  response: 7E804410C0929
