--- a/tests/test_cases/2016/commands/7E0.0110.yaml
+++ b/tests/test_cases/2016/commands/7E0.0110.yaml
@@ -1,5 +1,5 @@
 command_id: 7E0.0110
 test_cases:
-- response: '7E80441100224'
-  expected_values:
+- expected_values:
     MAF: 5.48
+  response: '7E80441100224'
