--- a/tests/test_cases/2016/commands/7E0.012F.yaml
+++ b/tests/test_cases/2016/commands/7E0.012F.yaml
@@ -1,8 +1,8 @@
 command_id: 7E0.012F
 test_cases:
-- response: 7E803412F13
-  expected_values:
+- expected_values:
     FLI: 7.45098
-- response: 7E803412FFD
-  expected_values:
+  response: 7E803412F13
+- expected_values:
     FLI: 99.21569
+  response: 7E803412FFD
