--- a/tests/test_cases/2016/commands/7E0.0132.yaml
+++ b/tests/test_cases/2016/commands/7E0.0132.yaml
@@ -1,5 +1,5 @@
 command_id: 7E0.0132
 test_cases:
-- response: 7E8044132FC54
-  expected_values:
+- expected_values:
     EVAP_VP: -0.235
+  response: 7E8044132FC54
