--- a/tests/test_cases/2016/commands/7E0.0143.yaml
+++ b/tests/test_cases/2016/commands/7E0.0143.yaml
@@ -1,5 +1,5 @@
 command_id: 7E0.0143
 test_cases:
-- response: 7E8044143002E
-  expected_values:
+- expected_values:
     LOAD_ABS: 18.03922
+  response: 7E8044143002E
