--- a/tests/test_cases/2016/commands/7E0.014C.yaml
+++ b/tests/test_cases/2016/commands/7E0.014C.yaml
@@ -1,5 +1,5 @@
 command_id: 7E0.014C
 test_cases:
-- response: 7E803414C17
-  expected_values:
+- expected_values:
     TAC_PCT: 9.01961
+  response: 7E803414C17
