--- a/tests/test_cases/2016/commands/7E0.016D.yaml
+++ b/tests/test_cases/2016/commands/7E0.016D.yaml
@@ -1,9 +1,6 @@
 command_id: 7E0.016D
 test_cases:
-- response: |-
-    7E8100D416D1301D701
-    7E821AD00000001A800
-  expected_values:
+- expected_values:
     FRP_A: 4290
     FRP_A_CMD: 4710
     FRP_A_CMD_SUP: 1
@@ -16,3 +13,6 @@ test_cases:
     FRT_A_SUP: 0
     FRT_B: -40
     FRT_B_SUP: 0
+  response: |-
+    7E8100D416D1301D701
+    7E821AD00000001A800
