--- a/tests/test_cases/2019/commands/7E0.012F.yaml
+++ b/tests/test_cases/2019/commands/7E0.012F.yaml
@@ -1,14 +1,14 @@
 command_id: 7E0.012F
 test_cases:
-- response: 7E803412F98
-  expected_values:
+- expected_values:
     FLI: 59.60784
-- response: 7E803412F99
-  expected_values:
+  response: 7E803412F98
+- expected_values:
     FLI: 60
-- response: 7E803412FAB
-  expected_values:
+  response: 7E803412F99
+- expected_values:
     FLI: 67.05882
-- response: 7E803412FAC
-  expected_values:
+  response: 7E803412FAB
+- expected_values:
     FLI: 67.45098
+  response: 7E803412FAC
