--- a/tests/test_cases/2019/commands/7E0.7E8.22000D.yaml
+++ b/tests/test_cases/2019/commands/7E0.7E8.22000D.yaml
@@ -1,5 +1,5 @@
 command_id: 7E0.7E8.22000D
 test_cases:
-- response: 7E80462000D00
-  expected_values:
+- expected_values:
     SIERRA1500_VSS: 0
+  response: 7E80462000D00
