--- a/tests/test_cases/2020/commands/7E0.012F.yaml
+++ b/tests/test_cases/2020/commands/7E0.012F.yaml
@@ -1,8 +1,8 @@
 command_id: 7E0.012F
 test_cases:
-- response: 7E803412F0C
-  expected_values:
+- expected_values:
     FLI: 4.70588
-- response: 7E803412FBF
-  expected_values:
+  response: 7E803412F0C
+- expected_values:
     FLI: 74.90196
+  response: 7E803412FBF
