--- a/tests/test_cases/2020/commands/7E0.0142.yaml
+++ b/tests/test_cases/2020/commands/7E0.0142.yaml
@@ -1,11 +1,11 @@
 command_id: 7E0.0142
 test_cases:
-- response: '7E80441420000'
-  expected_values:
+- expected_values:
     VPWR: 0
-- response: 7E804414235FE
-  expected_values:
+  response: '7E80441420000'
+- expected_values:
     VPWR: 13.822
-- response: '7E80441423607'
-  expected_values:
+  response: 7E804414235FE
+- expected_values:
     VPWR: 13.831
+  response: '7E80441423607'
