--- a/tests/test_cases/2020/commands/7E0.016D.yaml
+++ b/tests/test_cases/2020/commands/7E0.016D.yaml
@@ -1,9 +1,6 @@
 command_id: 7E0.016D
 test_cases:
-- response: |-
-    7E8100D416D1301CA01
-    7E821B200000001B800
-  expected_values:
+- expected_values:
     FRP_A: 4340
     FRP_A_CMD: 4580
     FRP_A_CMD_SUP: 1
@@ -16,10 +13,10 @@ test_cases:
     FRT_A_SUP: 0
     FRT_B: -40
     FRT_B_SUP: 0
-- response: |-
-    7E8100D416D13021C02
-    7E82114000000021800
-  expected_values:
+  response: |-
+    7E8100D416D1301CA01
+    7E821B200000001B800
+- expected_values:
     FRP_A: 5320
     FRP_A_CMD: 5400
     FRP_A_CMD_SUP: 1
@@ -32,3 +29,6 @@ test_cases:
     FRT_A_SUP: 0
     FRT_B: -40
     FRT_B_SUP: 0
+  response: |-
+    7E8100D416D13021C02
+    7E82114000000021800
