--- a/tests/test_cases/2021/command_support.yaml
+++ b/tests/test_cases/2021/command_support.yaml
@@ -1,8 +1,8 @@
 model_year: 2021
 supported_commands_by_ecu:
-  7DF:
+  "7DF":
   - 7DF.0142
-  7E0:
+  "7E0":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0103:FUELSYS1,FUELSYS2
   - 0104:LOAD_PCT
@@ -55,35 +55,69 @@ supported_commands_by_ecu:
   - 0168:IAT_11,IAT_11_SUP,IAT_12,IAT_12_SUP,IAT_13,IAT_13_SUP,IAT_21,IAT_21_SUP,IAT_22,IAT_22_SUP,IAT_23,IAT_23_SUP
   - 0169:EGR_A_ACT,EGR_A_ACT_SUP,EGR_A_CMD,EGR_A_CMD_SUP,EGR_A_ERR,EGR_A_ERR_SUP,EGR_B_ACT,EGR_B_ACT_SUP,EGR_B_CMD,EGR_B_CMD_SUP,EGR_B_ERR,EGR_B_ERR_SUP
   - 016D:FRP_A,FRP_A_CMD,FRP_A_CMD_SUP,FRP_A_SUP,FRP_B,FRP_B_CMD,FRP_B_CMD_SUP,FRP_B_SUP,FRT_A,FRT_A_SUP,FRT_B,FRT_B_SUP
+  - 0170:BP_A,BP_A_ACT,BP_A_ACT_SUP,BP_A_CMD,BP_A_CMD_SUP,BP_A_SUP,BP_B,BP_B_ACT,BP_B_ACT_SUP,BP_B_CMD,BP_B_CMD_SUP,BP_B_SUP
   - 017F:IDLE_TIME,IDLE_TIME_SUP,PTO_TIME,PTO_TIME_SUP,RUN_TIME,RUN_TIME_SUP
   - 018E:TQ_FR
   - 019D:FUEL_RATE_ALT,VFUEL_RATE
   - 019E:EXH_RATE
+  - 01A2:CYL_RATE
   - 01A6:ODO
+  - 7E0.0104:LOAD_PCT
+  - 7E0.0105:ECT
+  - 7E0.010A:FP
+  - 7E0.010C:RPM
+  - 7E0.010D:VSS
+  - 7E0.0110:MAF
+  - 7E0.011C:OBDSUP
+  - 7E0.011F:RUNTM
   - 7E0.012F:FLI
   - 7E0.0131:CLR_DIST
+  - 7E0.0133:BARO
+  - 7E0.013C:CATEMP11
   - 7E0.0142:VPWR
+  - 7E0.0143:LOAD_ABS
+  - 7E0.0144:EQ_RAT
+  - 7E0.0146:AAT
+  - 7E0.0149:APP_D
+  - 7E0.014A:APP_E
+  - 7E0.0151:FUEL_TYP
+  - 7E0.015C:EOT
+  - 7E0.015D:FUEL_TIMING
+  - 7E0.015E:FUEL_RATE
+  - 7E0.0161:TQ_DD
+  - 7E0.0162:TQ_ACT
+  - 7E0.0163:TQ_REF
+  - 7E0.0167:ECT_1,ECT_1_SUP,ECT_2,ECT_2_SUP
+  - 7E0.0168:IAT_11,IAT_11_SUP,IAT_12,IAT_12_SUP,IAT_13,IAT_13_SUP,IAT_21,IAT_21_SUP,IAT_22,IAT_22_SUP,IAT_23,IAT_23_SUP
+  - 7E0.0169:EGR_A_ACT,EGR_A_ACT_SUP,EGR_A_CMD,EGR_A_CMD_SUP,EGR_A_ERR,EGR_A_ERR_SUP,EGR_B_ACT,EGR_B_ACT_SUP,EGR_B_CMD,EGR_B_CMD_SUP,EGR_B_ERR,EGR_B_ERR_SUP
+  - 7E0.016D:FRP_A,FRP_A_CMD,FRP_A_CMD_SUP,FRP_A_SUP,FRP_B,FRP_B_CMD,FRP_B_CMD_SUP,FRP_B_SUP,FRT_A,FRT_A_SUP,FRT_B,FRT_B_SUP
+  - 7E0.0170:BP_A,BP_A_ACT,BP_A_ACT_SUP,BP_A_CMD,BP_A_CMD_SUP,BP_A_SUP,BP_B,BP_B_ACT,BP_B_ACT_SUP,BP_B_CMD,BP_B_CMD_SUP,BP_B_SUP
+  - 7E0.017F:IDLE_TIME,IDLE_TIME_SUP,PTO_TIME,PTO_TIME_SUP,RUN_TIME,RUN_TIME_SUP
+  - 7E0.018E:TQ_FR
+  - 7E0.019D:FUEL_RATE_ALT,VFUEL_RATE
+  - 7E0.019E:EXH_RATE
+  - 7E0.01A2:CYL_RATE
   - 7E0.01A6:ODO
   - 7E0.7E8.22000D:SIERRA1500_VSS
-  7E2:
+  "7E2":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0142:VPWR
-  7E5:
+  "7E5":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0142:VPWR
-  7E6:
+  "7E6":
   - 0142:VPWR
 unsupported_commands_by_ecu:
-  7E0:
+  "7E0":
   - 7E0.7E8.22248E:SIERRA1500_TP_FL
   - 7E0.7E8.22248F:SIERRA1500_TP_FR
   - 7E0.7E8.222490:SIERRA1500_TP_RR
   - 7E0.7E8.222491:SIERRA1500_TP_RL
   - 7E0.7E8.22C901:SIERRA1500_TP_P1,SIERRA1500_TP_P2,SIERRA1500_TP_P3,SIERRA1500_TP_P4
   - 7E0.7E8.22C902:SIERRA1500_TP_T1,SIERRA1500_TP_T2,SIERRA1500_TP_T3,SIERRA1500_TP_T4
-  7E2:
+  "7E2":
   - 7E2.7EA.0142
-  7E4:
+  "7E4":
   - 7E4.7EC.22434F
   - 7E4.7EC.224368
   - 7E4.7EC.224369
@@ -94,9 +128,9 @@ unsupported_commands_by_ecu:
   - 7E4.7EC.2243AF
   - 7E4.7EC.224531
   - 7E4.7EC.228334
-  7E5:
+  "7E5":
   - 7E5.7ED.0142
-  7E7:
+  "7E7":
   - 7E7.7EF.224181
   - 7E7.7EF.224182
   - 7E7.7EF.224183
@@ -193,9 +227,9 @@ unsupported_commands_by_ecu:
   - 7E7.7EF.22423E
   - 7E7.7EF.22423F
   - 7E7.7EF.224240
-  DA1D:
+  "DA1D":
   - DA1D.2233E5
-  DACB:
+  "DACB":
   - DACB.2227C6
   - DACB.222AF5
   - DACB.222B43
