--- a/tests/test_cases/2021/commands/7E0.0142.yaml
+++ b/tests/test_cases/2021/commands/7E0.0142.yaml
@@ -1,11 +1,11 @@
 command_id: 7E0.0142
 test_cases:
-- response: '7E80441420000'
-  expected_values:
+- expected_values:
     VPWR: 0
-- response: 7E804414235FF
-  expected_values:
-    VPWR: 13.823
-- response: 7E804414239D7
-  expected_values:
+  response: '7E80441420000'
+- expected_values:
+    VPWR: 13.567
+  response: 7E804414234FF
+- expected_values:
     VPWR: 14.807
+  response: 7E804414239D7
