--- a/tests/test_cases/2021/commands/7E0.01A6.yaml
+++ b/tests/test_cases/2021/commands/7E0.01A6.yaml
@@ -1,14 +1,17 @@
 command_id: 7E0.01A6
 test_cases:
-- response: 7E80641A6001693FB
-  expected_values:
+- expected_values:
+    ODO: 98073.3
+  response: 7E80641A6000EF6FD
+- expected_values:
     ODO: 147967.5
-- response: 7E80641A60016B8FF
-  expected_values:
+  response: 7E80641A6001693FB
+- expected_values:
     ODO: 148915.1
-- response: 7E80641A60016C001
-  expected_values:
+  response: 7E80641A60016B8FF
+- expected_values:
     ODO: 149094.5
-- response: 7E80641A60016FF03
-  expected_values:
+  response: 7E80641A60016C001
+- expected_values:
     ODO: 150707.5
+  response: 7E80641A60016FF03
