--- a/tests/test_cases/2021/commands/7E0.7E8.22000D.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.22000D.yaml
@@ -1,8 +1,8 @@
 command_id: 7E0.7E8.22000D
 test_cases:
-- response: 7E80462000D00
-  expected_values:
+- expected_values:
     SIERRA1500_VSS: 0
-- response: 7E80462000DFF
-  expected_values:
+  response: 7E80462000D00
+- expected_values:
     SIERRA1500_VSS: 255
+  response: 7E80462000DFF
