--- a/tests/test_cases/2022/commands/DB33.012F.yaml
+++ b/tests/test_cases/2022/commands/DB33.012F.yaml
@@ -1,8 +1,8 @@
 command_id: DB33.012F
 test_cases:
-- response: 18DAF11103412F7D
-  expected_values:
-    FLI: 49.01961
-- response: 18DAF11103412FFF
-  expected_values:
+- expected_values:
+    FLI: 33.33333
+  response: 18DAF11103412F55
+- expected_values:
     FLI: 100
+  response: 18DAF11103412FFF
