--- a/tests/test_cases/2024/commands/DB33.01A6.yaml
+++ b/tests/test_cases/2024/commands/DB33.01A6.yaml
@@ -1,29 +1,29 @@
 command_id: DB33.01A6
 test_cases:
-- response: 18DAF1110641A60004B0F9
-  expected_values:
+- expected_values:
     ODO: 30744.9
-- response: 18DAF1110641A60004B0FA
-  expected_values:
+  response: 18DAF1110641A60004B0F9
+- expected_values:
     ODO: 30745
-- response: 18DAF1110641A60004B0FC
-  expected_values:
+  response: 18DAF1110641A60004B0FA
+- expected_values:
     ODO: 30745.2
-- response: 18DAF1110641A60004B0FE
-  expected_values:
+  response: 18DAF1110641A60004B0FC
+- expected_values:
     ODO: 30745.4
-- response: 18DAF1110641A60004B0FF
-  expected_values:
+  response: 18DAF1110641A60004B0FE
+- expected_values:
     ODO: 30745.5
-- response: 18DAF1110641A60004B101
-  expected_values:
+  response: 18DAF1110641A60004B0FF
+- expected_values:
     ODO: 30745.7
-- response: 18DAF1110641A60004B103
-  expected_values:
+  response: 18DAF1110641A60004B101
+- expected_values:
     ODO: 30745.9
-- response: 18DAF1110641A60004B105
-  expected_values:
+  response: 18DAF1110641A60004B103
+- expected_values:
     ODO: 30746.1
-- response: 18DAF1110641A60004B2A4
-  expected_values:
+  response: 18DAF1110641A60004B105
+- expected_values:
     ODO: 30787.6
+  response: 18DAF1110641A60004B2A4
