--- a/tests/test_cases/2021/command_support.yaml
+++ b/tests/test_cases/2021/command_support.yaml
@@ -21,6 +21,8 @@ supported_commands_by_ecu:
   - 0113:O2S11_EXISTS,O2S12_EXISTS,O2S13_EXISTS,O2S14_EXISTS,O2S21_EXISTS,O2S22_EXISTS,O2S23_EXISTS,O2S24_EXISTS
   - 0114:O2S11,SHRTFT11
   - 0115:O2S12,SHRTFT11
+  - 0118:O2S21,SHRTFT21
+  - 0119:O2S22,SHRTFT22
   - 011C:OBDSUP
   - 011F:RUNTM
   - 0121:MIL_DIST
@@ -102,6 +104,7 @@ supported_commands_by_ecu:
   "7E2":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0142:VPWR
+  - 7E2.7EA.0142
   "7E5":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0142:VPWR
@@ -115,8 +118,6 @@ unsupported_commands_by_ecu:
   - 7E0.7E8.222491:SIERRA1500_TP_RL
   - 7E0.7E8.22C901:SIERRA1500_TP_P1,SIERRA1500_TP_P2,SIERRA1500_TP_P3,SIERRA1500_TP_P4
   - 7E0.7E8.22C902:SIERRA1500_TP_T1,SIERRA1500_TP_T2,SIERRA1500_TP_T3,SIERRA1500_TP_T4
-  "7E2":
-  - 7E2.7EA.0142
   "7E4":
   - 7E4.7EC.22434F
   - 7E4.7EC.224368
