--- a/tests/test_cases/2021/commands/7E0.0142.yaml
+++ b/tests/test_cases/2021/commands/7E0.0142.yaml
@@ -7,5 +7,5 @@ test_cases:
     VPWR: 13.567
   response: 7E804414234FF
 - expected_values:
-    VPWR: 14.807
-  response: 7E804414239D7
+    VPWR: 14.598
+  response: '7E80441423906'
