--- a/tests/test_cases/2022/command_support.yaml
+++ b/tests/test_cases/2022/command_support.yaml
@@ -52,6 +52,7 @@ supported_commands_by_ecu:
   - 0167:ECT_1,ECT_1_SUP,ECT_2,ECT_2_SUP
   - 0168:IAT_11,IAT_11_SUP,IAT_12,IAT_12_SUP,IAT_13,IAT_13_SUP,IAT_21,IAT_21_SUP,IAT_22,IAT_22_SUP,IAT_23,IAT_23_SUP
   - 0169:EGR_A_ACT,EGR_A_ACT_SUP,EGR_A_CMD,EGR_A_CMD_SUP,EGR_A_ERR,EGR_A_ERR_SUP,EGR_B_ACT,EGR_B_ACT_SUP,EGR_B_CMD,EGR_B_CMD_SUP,EGR_B_ERR,EGR_B_ERR_SUP
+  - 016B:EGRTA,EGRTA,EGRTA_SUP,EGRTA_WR_SUP,EGRTB,EGRTB,EGRTB_SUP,EGRTB_WR_SUP,EGRTC,EGRTC,EGRTC_SUP,EGRTC_WR_SUP,EGRTD,EGRTD,EGRTD_SUP,EGRTD_WR_SUP
   - 016D:FRP_A,FRP_A_CMD,FRP_A_CMD_SUP,FRP_A_SUP,FRP_B,FRP_B_CMD,FRP_B_CMD_SUP,FRP_B_SUP,FRT_A,FRT_A_SUP,FRT_B,FRT_B_SUP
   - 0170:BP_A,BP_A_ACT,BP_A_ACT_SUP,BP_A_CMD,BP_A_CMD_SUP,BP_A_SUP,BP_B,BP_B_ACT,BP_B_ACT_SUP,BP_B_CMD,BP_B_CMD_SUP,BP_B_SUP
   - 017F:IDLE_TIME,IDLE_TIME_SUP,PTO_TIME,PTO_TIME_SUP,RUN_TIME,RUN_TIME_SUP
@@ -74,30 +75,48 @@ unsupported_commands_by_ecu:
   - 7E0.7E8.22C902:SIERRA1500_TP_T1,SIERRA1500_TP_T2,SIERRA1500_TP_T3,SIERRA1500_TP_T4
   "DB33":
   - DB33.0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
+  - DB33.0103:FUELSYS1,FUELSYS2
   - DB33.0104:LOAD_PCT
   - DB33.0105:ECT
+  - DB33.0106:SHRTFT1
+  - DB33.0107:LONGFT1
+  - DB33.0108:SHRTFT2,SHRTFT4
+  - DB33.0109:LONGFT2,LONGFT4
+  - DB33.010A:FP
   - DB33.010C:RPM
   - DB33.010D:VSS
+  - DB33.010E:SPARKADV
+  - DB33.010F:IAT
   - DB33.0110:MAF
+  - DB33.0111:TP
   - DB33.011C:OBDSUP
   - DB33.011F:RUNTM
   - DB33.0121:MIL_DIST
+  - DB33.0123:FRP
+  - DB33.012E:EVAP_PCT
   - DB33.0130:WARM_UPS
+  - DB33.0132:EVAP_VP
   - DB33.0133:BARO
   - DB33.013C:CATEMP11
+  - DB33.013D:CATEMP21
   - DB33.0141:ACRFCMPL,ACRF_ENA,AIR_CMPL,AIR_ENA,CAT_CMPL,CAT_ENA,CCM_CMPL,CCM_ENA,CIM_SUP_FLAG,EGR_CMPL,EGR_ENA,EVAPCMPL,EVAP_ENA,FUEL_CMPL,FUEL_ENA,HCATCMPL,HCAT_ENA,HTR_CMPL,HTR_ENA,MIS_CMPL,MIS_ENA,O2S_CMPL,O2S_ENA
   - DB33.0142:VPWR
   - DB33.0143:LOAD_ABS
   - DB33.0144:EQ_RAT
+  - DB33.0145:TP_R
   - DB33.0146:AAT
+  - DB33.0147:TP_B
   - DB33.0149:APP_D
   - DB33.014A:APP_E
+  - DB33.014C:TAC_PCT
+  - DB33.0151:FUEL_TYP
   - DB33.015C:EOT
   - DB33.015E:FUEL_RATE
   - DB33.0161:TQ_DD
   - DB33.0162:TQ_ACT
   - DB33.0163:TQ_REF
   - DB33.0167:ECT_1,ECT_1_SUP,ECT_2,ECT_2_SUP
+  - DB33.0168:IAT_11,IAT_11_SUP,IAT_12,IAT_12_SUP,IAT_13,IAT_13_SUP,IAT_21,IAT_21_SUP,IAT_22,IAT_22_SUP,IAT_23,IAT_23_SUP
   - DB33.0169:EGR_A_ACT,EGR_A_ACT_SUP,EGR_A_CMD,EGR_A_CMD_SUP,EGR_A_ERR,EGR_A_ERR_SUP,EGR_B_ACT,EGR_B_ACT_SUP,EGR_B_CMD,EGR_B_CMD_SUP,EGR_B_ERR,EGR_B_ERR_SUP
   - DB33.016D:FRP_A,FRP_A_CMD,FRP_A_CMD_SUP,FRP_A_SUP,FRP_B,FRP_B_CMD,FRP_B_CMD_SUP,FRP_B_SUP,FRT_A,FRT_A_SUP,FRT_B,FRT_B_SUP
   - DB33.0170:BP_A,BP_A_ACT,BP_A_ACT_SUP,BP_A_CMD,BP_A_CMD_SUP,BP_A_SUP,BP_B,BP_B_ACT,BP_B_ACT_SUP,BP_B_CMD,BP_B_CMD_SUP,BP_B_SUP
