Update command data for GMC/Sierra 1500

--- a/tests/test_cases/2021/commands/7E0.01A6.yaml
+++ b/tests/test_cases/2021/commands/7E0.01A6.yaml
@@ -15,3 +15,6 @@ test_cases:
 - expected_values:
     ODO: 157360.4
   response: 7E80641A6001802E4
+- expected_values:
+    ODO: 164746.7
+  response: 7E80641A60019236B
