--- a/tests/test_cases/2021/commands/7E0.0131.yaml
+++ b/tests/test_cases/2021/commands/7E0.0131.yaml
@@ -10,8 +10,8 @@ test_cases:
     CLR_DIST: 19711
   response: 7E80441314CFF
 - expected_values:
-    CLR_DIST: 31277
-  response: 7E80441317A2D
+    CLR_DIST: 34324
+  response: '7E80441318614'
 - expected_values:
     CLR_DIST: 30387
   response: |-
