--- a/tests/test_cases/2023/commands/DB33.01A6.yaml
+++ b/tests/test_cases/2023/commands/DB33.01A6.yaml
@@ -3,3 +3,6 @@ test_cases:
 - expected_values:
     ODO: 72859.7
   response: 18DAF1110641A6000B1E15
+- expected_values:
+    ODO: 72894.5
+  response: 18DAF1110641A6000B1F71
