Update command data for GMC/Sierra 1500

--- a/tests/test_cases/2023/commands/DB33.01A6.yaml
+++ b/tests/test_cases/2023/commands/DB33.01A6.yaml
@@ -6,3 +6,6 @@ test_cases:
 - expected_values:
     ODO: 72894.5
   response: 18DAF1110641A6000B1F71
+- expected_values:
+    ODO: 72901.3
+  response: 18DAF1110641A6000B1FB5
