--- a/tests/test_cases/2023/commands/DB33.012F.yaml
+++ b/tests/test_cases/2023/commands/DB33.012F.yaml
@@ -1,6 +1,12 @@
 command_id: DB33.012F
 test_cases:
 - expected_values:
+    FLI: 88.62745
+  response: 18DAF11103412FE2
+- expected_values:
+    FLI: 89.01961
+  response: 18DAF11103412FE3
+- expected_values:
     FLI: 95.68627
   response: 18DAF11103412FF4
 - expected_values:
