--- a/tests/test_cases/2023/commands/DB33.0131.yaml
+++ b/tests/test_cases/2023/commands/DB33.0131.yaml
@@ -6,3 +6,6 @@ test_cases:
 - expected_values:
     CLR_DIST: 4322
   response: 18DAF11104413110E2
+- expected_values:
+    CLR_DIST: 4329
+  response: 18DAF11104413110E9
