Update command data for GMC/Sierra 1500

--- a/tests/test_cases/2023/commands/DB33.0131.yaml
+++ b/tests/test_cases/2023/commands/DB33.0131.yaml
@@ -9,3 +9,6 @@ test_cases:
 - expected_values:
     CLR_DIST: 4329
   response: 18DAF11104413110E9
+- expected_values:
+    CLR_DIST: 4441
+  response: 18DAF1110441311159
