--- a/tests/test_cases/2023/command_support.yaml
+++ b/tests/test_cases/2023/command_support.yaml
@@ -61,7 +61,10 @@ supported_commands_by_ecu:
   - 019E:EXH_RATE
   - 01A6:ODO
   - DB33.0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
+  - DB33.0104:LOAD_PCT
+  - DB33.0105:ECT
   - DB33.010D:VSS
+  - DB33.0110:MAF
   - DB33.011C:OBDSUP
   - DB33.011F:RUNTM
   - DB33.0121:MIL_DIST
@@ -69,6 +72,7 @@ supported_commands_by_ecu:
   - DB33.0130:WARM_UPS
   - DB33.0131:CLR_DIST
   - DB33.0142:VPWR
+  - DB33.0144:EQ_RAT
   - DB33.0146:AAT
   - DB33.01A6:ODO
 unsupported_commands_by_ecu:
