--- a/tests/test_cases/2023/commands/DB33.012F.yaml
+++ b/tests/test_cases/2023/commands/DB33.012F.yaml
@@ -1,6 +1,18 @@
 command_id: DB33.012F
 test_cases:
 - expected_values:
+    FLI: 57.64706
+  response: 18DAF11103412F93
+- expected_values:
+    FLI: 63.92157
+  response: 18DAF11103412FA3
+- expected_values:
+    FLI: 64.31373
+  response: 18DAF11103412FA4
+- expected_values:
+    FLI: 65.09804
+  response: 18DAF11103412FA6
+- expected_values:
     FLI: 67.45098
   response: 18DAF11103412FAC
 - expected_values:
