--- a/tests/test_cases/2023/commands/DB33.0105.yaml
+++ b/tests/test_cases/2023/commands/DB33.0105.yaml
@@ -1,5 +1,20 @@
 command_id: DB33.0105
 test_cases:
 - expected_values:
+    ECT: 70
+  response: 18DAF1110341056E
+- expected_values:
+    ECT: 72
+  response: 18DAF11103410570
+- expected_values:
+    ECT: 73
+  response: 18DAF11103410571
+- expected_values:
+    ECT: 77
+  response: 18DAF11103410575
+- expected_values:
+    ECT: 80
+  response: 18DAF11103410578
+- expected_values:
     ECT: 85
   response: 18DAF1110341057D
