--- a/tests/test_cases/2023/commands/DB33.010D.yaml
+++ b/tests/test_cases/2023/commands/DB33.010D.yaml
@@ -3,3 +3,9 @@ test_cases:
 - expected_values:
     VSS: 0
   response: 18DAF11103410D00
+- expected_values:
+    VSS: 5
+  response: 18DAF11103410D05
+- expected_values:
+    VSS: 15
+  response: 18DAF11103410D0F
