Update command data for GMC/Sierra 1500

--- a/tests/test_cases/2022/commands/DB33.0144.yaml
+++ b/tests/test_cases/2022/commands/DB33.0144.yaml
@@ -4,11 +4,17 @@ test_cases:
     EQ_RAT: 1.50591
   response: 18DAF111044144C0C1
 - expected_values:
+    EQ_RAT: 1.58886
+  response: 18DAF111044144CB5F
+- expected_values:
     EQ_RAT: 1.65252
   response: 18DAF111044144D385
 - expected_values:
     EQ_RAT: 1.72628
   response: 18DAF111044144DCF6
+- expected_values:
+    EQ_RAT: 1.79467
+  response: 18DAF111044144E5B7
 - expected_values:
     EQ_RAT: 1.81076
   response: 18DAF111044144E7C6
