Update command data for GMC/Sierra 1500

--- a/tests/test_cases/2023/commands/DB33.0131.yaml
+++ b/tests/test_cases/2023/commands/DB33.0131.yaml
@@ -18,3 +18,15 @@ test_cases:
 - expected_values:
     CLR_DIST: 4499
   response: 18DAF1110441311193
+- expected_values:
+    CLR_DIST: 4691
+  response: 18DAF1110441311253
+- expected_values:
+    CLR_DIST: 4692
+  response: 18DAF1110441311254
+- expected_values:
+    CLR_DIST: 4693
+  response: 18DAF1110441311255
+- expected_values:
+    CLR_DIST: 4694
+  response: 18DAF1110441311256
