--- a/tests/test_cases/2014/commands/7E0.0131.yaml
+++ b/tests/test_cases/2014/commands/7E0.0131.yaml
@@ -3,3 +3,21 @@ test_cases:
 - expected_values:
     CLR_DIST: 116
   response: '7E80441310074'
+- expected_values:
+    CLR_DIST: 177
+  response: 7E804413100B1
+- expected_values:
+    CLR_DIST: 178
+  response: 7E804413100B2
+- expected_values:
+    CLR_DIST: 179
+  response: 7E804413100B3
+- expected_values:
+    CLR_DIST: 180
+  response: 7E804413100B4
+- expected_values:
+    CLR_DIST: 181
+  response: 7E804413100B5
+- expected_values:
+    CLR_DIST: 182
+  response: 7E804413100B6
