Update command data for GMC/Sierra 1500

--- a/tests/test_cases/2022/commands/DB33.0110.yaml
+++ b/tests/test_cases/2022/commands/DB33.0110.yaml
@@ -1,6 +1,9 @@
 command_id: DB33.0110
 test_cases:
 - expected_values:
+    MAF: 10.1
+  response: 18DAF11104411003F2
+- expected_values:
     MAF: 10.22
   response: 18DAF11104411003FE
 - expected_values:
