Update command data for GMC/Sierra 1500

--- a/tests/test_cases/2021/commands/7E0.0110.yaml
+++ b/tests/test_cases/2021/commands/7E0.0110.yaml
@@ -9,3 +9,6 @@ test_cases:
 - expected_values:
     MAF: 16.37
   response: '7E80441100665'
+- expected_values:
+    MAF: 22.57
+  response: 7E804411008D1
