--- a/tests/test_cases/2021/commands/7E0.0105.yaml
+++ b/tests/test_cases/2021/commands/7E0.0105.yaml
@@ -1,8 +1,23 @@
 command_id: 7E0.0105
 test_cases:
 - expected_values:
+    ECT: 60
+  response: '7E803410564'
+- expected_values:
     ECT: 71
   response: 7E80341056F
 - expected_values:
     ECT: 72
   response: '7E803410570'
+- expected_values:
+    ECT: 73
+  response: '7E803410571'
+- expected_values:
+    ECT: 81
+  response: '7E803410579'
+- expected_values:
+    ECT: 85
+  response: 7E80341057D
+- expected_values:
+    ECT: 88
+  response: '7E803410580'
