--- a/tests/test_cases/2014/commands/7E0.0131.yaml
+++ b/tests/test_cases/2014/commands/7E0.0131.yaml
@@ -3,3 +3,9 @@ test_cases:
 - expected_values:
     CLR_DIST: 116
   response: '7E80441310074'
+- expected_values:
+    CLR_DIST: 182
+  response: 7E804413100B6
+- expected_values:
+    CLR_DIST: 277
+  response: '7E80441310115'
