--- a/tests/test_cases/2014/commands/7E0.0123.yaml
+++ b/tests/test_cases/2014/commands/7E0.0123.yaml
@@ -3,3 +3,6 @@ test_cases:
 - expected_values:
     FRP: 4890
   response: 7E804412301E9
+- expected_values:
+    FRP: 9610
+  response: 7E804412303C1
