--- a/tests/test_cases/2014/commands/7E0.013C.yaml
+++ b/tests/test_cases/2014/commands/7E0.013C.yaml
@@ -3,3 +3,6 @@ test_cases:
 - expected_values:
     CATEMP11: 407
   response: 7E804413C1176
+- expected_values:
+    CATEMP11: 746
+  response: 7E804413C1EB4
