--- a/tests/test_cases/2014/commands/7E0.0109.yaml
+++ b/tests/test_cases/2014/commands/7E0.0109.yaml
@@ -1,5 +1,8 @@
 command_id: 7E0.0109
 test_cases:
 - expected_values:
-    LONGFT2: -53.78125
+    LONGFT2: -25.78125
   response: 7E80341095F
+- expected_values:
+    LONGFT2: -1.5625
+  response: 7E80341097E
