--- a/tests/test_cases/2014/commands/7E0.010A.yaml
+++ b/tests/test_cases/2014/commands/7E0.010A.yaml
@@ -1,5 +1,8 @@
 command_id: 7E0.010A
 test_cases:
 - expected_values:
+    FP: 291
+  response: 7E803410A61
+- expected_values:
     FP: 330
   response: 7E803410A6E
