--- a/tests/test_cases/2014/commands/7E0.010E.yaml
+++ b/tests/test_cases/2014/commands/7E0.010E.yaml
@@ -1,5 +1,8 @@
 command_id: 7E0.010E
 test_cases:
 - expected_values:
+    SPARKADV: 3.5
+  response: 7E803410E87
+- expected_values:
     SPARKADV: 11.5
   response: 7E803410E97
