--- a/tests/test_cases/2014/commands/7E0.010F.yaml
+++ b/tests/test_cases/2014/commands/7E0.010F.yaml
@@ -1,5 +1,8 @@
 command_id: 7E0.010F
 test_cases:
 - expected_values:
+    IAT: 11
+  response: 7E803410F33
+- expected_values:
     IAT: 37
   response: 7E803410F4D
