--- a/tests/test_cases/2014/commands/7E0.012E.yaml
+++ b/tests/test_cases/2014/commands/7E0.012E.yaml
@@ -1,5 +1,8 @@
 command_id: 7E0.012E
 test_cases:
 - expected_values:
+    EVAP_PCT: 14.90196
+  response: 7E803412E26
+- expected_values:
     EVAP_PCT: 15.68627
   response: 7E803412E28
