--- a/tests/test_cases/2014/commands/7E0.0143.yaml
+++ b/tests/test_cases/2014/commands/7E0.0143.yaml
@@ -3,3 +3,6 @@ test_cases:
 - expected_values:
     LOAD_ABS: 18.03922
   response: 7E8044143002E
+- expected_values:
+    LOAD_ABS: 76.07843
+  response: 7E804414300C2
