--- a/tests/test_cases/2014/commands/7E0.0168.yaml
+++ b/tests/test_cases/2014/commands/7E0.0168.yaml
@@ -1,6 +1,22 @@
 command_id: 7E0.0168
 test_cases:
 - expected_values:
+    IAT_11: 11
+    IAT_11_SUP: 1
+    IAT_12: 16
+    IAT_12_SUP: 1
+    IAT_13: 0
+    IAT_13_SUP: 0
+    IAT_21: 0
+    IAT_21_SUP: 0
+    IAT_22: 0
+    IAT_22_SUP: 0
+    IAT_23: 0
+    IAT_23_SUP: 0
+  response: |-
+    7E81009416803333828
+    7E821282828AAAAAAAA
+- expected_values:
     IAT_11: 37
     IAT_11_SUP: 1
     IAT_12: 45
