Update command data for GMC/Sierra 1500

--- a/tests/test_cases/2014/commands/7E0.0104.yaml
+++ b/tests/test_cases/2014/commands/7E0.0104.yaml
@@ -1,17 +1,23 @@
 command_id: 7E0.0104
 test_cases:
 - expected_values:
+    LOAD_PCT: 14.5098
+  response: |-
+    01041
+    7E803410425
+- expected_values:
+    LOAD_PCT: 19.60784
+  response: |-
+    01041
+    7E803410432
+- expected_values:
+    LOAD_PCT: 54.11765
+  response: |-
+    01041
+    7E80341048A
+- expected_values:
     LOAD_PCT: 0
   response: '7E803410400'
 - expected_values:
-    LOAD_PCT: 16.47059
-  response: 7E80341042A
-- expected_values:
-    LOAD_PCT: 16.86275
-  response: 7E80341042B
-- expected_values:
-    LOAD_PCT: 17.2549
-  response: 7E80341042C
-- expected_values:
-    LOAD_PCT: 18.43137
-  response: 7E80341042F
+    LOAD_PCT: 89.01961
+  response: 7E8034104E3
