Update command data for GMC/Sierra 1500

--- a/tests/test_cases/2022/commands/DB33.0110.yaml
+++ b/tests/test_cases/2022/commands/DB33.0110.yaml
@@ -1,11 +1,14 @@
 command_id: DB33.0110
 test_cases:
 - expected_values:
+    MAF: 9.55
+  response: 18DAF11104411003BB
+- expected_values:
     MAF: 10.22
   response: 18DAF11104411003FE
 - expected_values:
-    MAF: 28.19
-  response: 18DAF1110441100B03
+    MAF: 33.28
+  response: 18DAF1110441100D00
 - expected_values:
     MAF: 152.77
   response: 18DAF1110441103BAD
