Update command data for GMC/Sierra 1500

--- a/tests/test_cases/2014/commands/7E0.7E8.22000D.yaml
+++ b/tests/test_cases/2014/commands/7E0.7E8.22000D.yaml
@@ -3,3 +3,6 @@ test_cases:
 - expected_values:
     SIERRA1500_VSS: 0
   response: 7E80462000D00
+- expected_values:
+    SIERRA1500_VSS: 93
+  response: 7E80462000D5D
